Chromecast: disable multisampled render to texture

This causes WebGL conformance test failures (glReadPixels fails
with GL_INVALID_OPERATION).  Apply the workaround while we wait
for a fix.

BUG=594016
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1784493005

Cr-Commit-Position: refs/heads/master@{#382373}

Former-commit-id: 0f7ba890b9eff777bdc670dc73c9e6ca518af89f